rename some OpenAPIv2 endpoint names
