# pkg/api/v1/gen/network/networkservice.swagger.json
@@ -21,27 +21,7 @@
     "application/x-ndjson"
   ],
   "paths": {
-    "/api/v1/config/networkattachment": {
-      "get": {
-        "operationId": "NetworkService_GetAllNetworkAttachments",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/networkserviceNetworkAttachments"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "tags": [
-          "NetworkService"
-        ]
-      },
+    "/api/v1/config/networkattachments": {
       "post": {
         "operationId": "NetworkService_CreateNetworkAttachment",
         "responses": {
@@ -74,35 +54,7 @@
         ]
       }
     },
-    "/api/v1/config/networkattachment/{name}": {
-      "get": {
-        "operationId": "NetworkService_GetNetworkAttachment",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/networkserviceNetworkAttachment"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "name",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "NetworkService"
-        ]
-      },
+    "/api/v1/config/networkattachments/{name}": {
       "delete": {
         "operationId": "NetworkService_DeleteNetworkAttachment",
         "responses": {
@@ -222,6 +174,58 @@
             "schema": {
               "type": "object",
               "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "NetworkService"
+        ]
+      }
+    },
+    "/api/v1/networkattachments": {
+      "get": {
+        "operationId": "NetworkService_GetAllNetworkAttachments",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/networkserviceNetworkAttachments"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "NetworkService"
+        ]
+      }
+    },
+    "/api/v1/networkattachments/{name}": {
+      "get": {
+        "operationId": "NetworkService_GetNetworkAttachment",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/networkserviceNetworkAttachment"
             }
           },
           "default": {
