# pkg/api/v1/gen/network/networkservice_grpc.pb.go
@@ -28,10 +28,10 @@ const (
 	NetworkService_DeleteResourceConfig_FullMethodName     = "/networkservice.NetworkService/DeleteResourceConfig"
 	NetworkService_GetAllResources_FullMethodName          = "/networkservice.NetworkService/GetAllResources"
 	NetworkService_GetResource_FullMethodName              = "/networkservice.NetworkService/GetResource"
-	NetworkService_GetAllNetworkAttachments_FullMethodName = "/networkservice.NetworkService/GetAllNetworkAttachments"
-	NetworkService_GetNetworkAttachment_FullMethodName     = "/networkservice.NetworkService/GetNetworkAttachment"
 	NetworkService_CreateNetworkAttachment_FullMethodName  = "/networkservice.NetworkService/CreateNetworkAttachment"
 	NetworkService_DeleteNetworkAttachment_FullMethodName  = "/networkservice.NetworkService/DeleteNetworkAttachment"
+	NetworkService_GetAllNetworkAttachments_FullMethodName = "/networkservice.NetworkService/GetAllNetworkAttachments"
+	NetworkService_GetNetworkAttachment_FullMethodName     = "/networkservice.NetworkService/GetNetworkAttachment"
 )
 
 // NetworkServiceClient is the client API for NetworkService service.
@@ -44,10 +44,10 @@ type NetworkServiceClient interface {
 	DeleteResourceConfig(ctx context.Context, in *ResourceName, opts ...grpc.CallOption) (*empty.Empty, error)
 	GetAllResources(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*Resources, error)
 	GetResource(ctx context.Context, in *ResourceName, opts ...grpc.CallOption) (*Resource, error)
-	GetAllNetworkAttachments(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*NetworkAttachments, error)
-	GetNetworkAttachment(ctx context.Context, in *NetworkAttachmentName, opts ...grpc.CallOption) (*NetworkAttachment, error)
 	CreateNetworkAttachment(ctx context.Context, in *NetworkAttachment, opts ...grpc.CallOption) (*empty.Empty, error)
 	DeleteNetworkAttachment(ctx context.Context, in *NetworkAttachmentName, opts ...grpc.CallOption) (*empty.Empty, error)
+	GetAllNetworkAttachments(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*NetworkAttachments, error)
+	GetNetworkAttachment(ctx context.Context, in *NetworkAttachmentName, opts ...grpc.CallOption) (*NetworkAttachment, error)
 }
 
 type networkServiceClient struct {
@@ -112,24 +112,6 @@ func (c *networkServiceClient) GetResource(ctx context.Context, in *ResourceName
 	return out, nil
 }
 
-func (c *networkServiceClient) GetAllNetworkAttachments(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*NetworkAttachments, error) {
-	out := new(NetworkAttachments)
-	err := c.cc.Invoke(ctx, NetworkService_GetAllNetworkAttachments_FullMethodName, in, out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *networkServiceClient) GetNetworkAttachment(ctx context.Context, in *NetworkAttachmentName, opts ...grpc.CallOption) (*NetworkAttachment, error) {
-	out := new(NetworkAttachment)
-	err := c.cc.Invoke(ctx, NetworkService_GetNetworkAttachment_FullMethodName, in, out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
 func (c *networkServiceClient) CreateNetworkAttachment(ctx context.Context, in *NetworkAttachment, opts ...grpc.CallOption) (*empty.Empty, error) {
 	out := new(empty.Empty)
 	err := c.cc.Invoke(ctx, NetworkService_CreateNetworkAttachment_FullMethodName, in, out, opts...)
@@ -148,6 +130,24 @@ func (c *networkServiceClient) DeleteNetworkAttachment(ctx context.Context, in *
 	return out, nil
 }
 
+func (c *networkServiceClient) GetAllNetworkAttachments(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*NetworkAttachments, error) {
+	out := new(NetworkAttachments)
+	err := c.cc.Invoke(ctx, NetworkService_GetAllNetworkAttachments_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *networkServiceClient) GetNetworkAttachment(ctx context.Context, in *NetworkAttachmentName, opts ...grpc.CallOption) (*NetworkAttachment, error) {
+	out := new(NetworkAttachment)
+	err := c.cc.Invoke(ctx, NetworkService_GetNetworkAttachment_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // NetworkServiceServer is the server API for NetworkService service.
 // All implementations must embed UnimplementedNetworkServiceServer
 // for forward compatibility
@@ -158,10 +158,10 @@ type NetworkServiceServer interface {
 	DeleteResourceConfig(context.Context, *ResourceName) (*empty.Empty, error)
 	GetAllResources(context.Context, *empty.Empty) (*Resources, error)
 	GetResource(context.Context, *ResourceName) (*Resource, error)
-	GetAllNetworkAttachments(context.Context, *empty.Empty) (*NetworkAttachments, error)
-	GetNetworkAttachment(context.Context, *NetworkAttachmentName) (*NetworkAttachment, error)
 	CreateNetworkAttachment(context.Context, *NetworkAttachment) (*empty.Empty, error)
 	DeleteNetworkAttachment(context.Context, *NetworkAttachmentName) (*empty.Empty, error)
+	GetAllNetworkAttachments(context.Context, *empty.Empty) (*NetworkAttachments, error)
+	GetNetworkAttachment(context.Context, *NetworkAttachmentName) (*NetworkAttachment, error)
 	mustEmbedUnimplementedNetworkServiceServer()
 }
 
@@ -187,17 +187,17 @@ func (UnimplementedNetworkServiceServer) GetAllResources(context.Context, *empty
 func (UnimplementedNetworkServiceServer) GetResource(context.Context, *ResourceName) (*Resource, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetResource not implemented")
 }
-func (UnimplementedNetworkServiceServer) GetAllNetworkAttachments(context.Context, *empty.Empty) (*NetworkAttachments, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method GetAllNetworkAttachments not implemented")
-}
-func (UnimplementedNetworkServiceServer) GetNetworkAttachment(context.Context, *NetworkAttachmentName) (*NetworkAttachment, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method GetNetworkAttachment not implemented")
-}
 func (UnimplementedNetworkServiceServer) CreateNetworkAttachment(context.Context, *NetworkAttachment) (*empty.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreateNetworkAttachment not implemented")
 }
 func (UnimplementedNetworkServiceServer) DeleteNetworkAttachment(context.Context, *NetworkAttachmentName) (*empty.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method DeleteNetworkAttachment not implemented")
+}
+func (UnimplementedNetworkServiceServer) GetAllNetworkAttachments(context.Context, *empty.Empty) (*NetworkAttachments, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetAllNetworkAttachments not implemented")
+}
+func (UnimplementedNetworkServiceServer) GetNetworkAttachment(context.Context, *NetworkAttachmentName) (*NetworkAttachment, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetNetworkAttachment not implemented")
 }
 func (UnimplementedNetworkServiceServer) mustEmbedUnimplementedNetworkServiceServer() {}
 
@@ -320,42 +320,6 @@ func _NetworkService_GetResource_Handler(srv interface{}, ctx context.Context, d
 	return interceptor(ctx, in, info, handler)
 }
 
-func _NetworkService_GetAllNetworkAttachments_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(empty.Empty)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(NetworkServiceServer).GetAllNetworkAttachments(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: NetworkService_GetAllNetworkAttachments_FullMethodName,
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(NetworkServiceServer).GetAllNetworkAttachments(ctx, req.(*empty.Empty))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _NetworkService_GetNetworkAttachment_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(NetworkAttachmentName)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(NetworkServiceServer).GetNetworkAttachment(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: NetworkService_GetNetworkAttachment_FullMethodName,
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(NetworkServiceServer).GetNetworkAttachment(ctx, req.(*NetworkAttachmentName))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
 func _NetworkService_CreateNetworkAttachment_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(NetworkAttachment)
 	if err := dec(in); err != nil {
@@ -392,6 +356,42 @@ func _NetworkService_DeleteNetworkAttachment_Handler(srv interface{}, ctx contex
 	return interceptor(ctx, in, info, handler)
 }
 
+func _NetworkService_GetAllNetworkAttachments_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(empty.Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(NetworkServiceServer).GetAllNetworkAttachments(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: NetworkService_GetAllNetworkAttachments_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(NetworkServiceServer).GetAllNetworkAttachments(ctx, req.(*empty.Empty))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _NetworkService_GetNetworkAttachment_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(NetworkAttachmentName)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(NetworkServiceServer).GetNetworkAttachment(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: NetworkService_GetNetworkAttachment_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(NetworkServiceServer).GetNetworkAttachment(ctx, req.(*NetworkAttachmentName))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // NetworkService_ServiceDesc is the grpc.ServiceDesc for NetworkService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -424,20 +424,20 @@ var NetworkService_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _NetworkService_GetResource_Handler,
 		},
 		{
-			MethodName: "GetAllNetworkAttachments",
-			Handler:    _NetworkService_GetAllNetworkAttachments_Handler,
-		},
-		{
-			MethodName: "GetNetworkAttachment",
-			Handler:    _NetworkService_GetNetworkAttachment_Handler,
-		},
-		{
 			MethodName: "CreateNetworkAttachment",
 			Handler:    _NetworkService_CreateNetworkAttachment_Handler,
 		},
 		{
 			MethodName: "DeleteNetworkAttachment",
 			Handler:    _NetworkService_DeleteNetworkAttachment_Handler,
+		},
+		{
+			MethodName: "GetAllNetworkAttachments",
+			Handler:    _NetworkService_GetAllNetworkAttachments_Handler,
+		},
+		{
+			MethodName: "GetNetworkAttachment",
+			Handler:    _NetworkService_GetNetworkAttachment_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
